Bug: PRD Reviewer: Lynn comment: adjusted the Powered by Novell Filr image to align with the login name in the masthead.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2925,8 +2925,8 @@ body, table td, select
 .mastheadGlobalActionsPanel
 {
 	color: #FFFFFF;
-	right: 5px;
 	position: absolute;
+	right: 10px;
 	top: 10px;
 	white-space: nowrap;
 	z-index: 20;
@@ -3010,7 +3010,7 @@ body, table td, select
 	cursor: pointer;
 	font-size: 1em;
 	letter-spacing: 0.03em;
-	padding: 2px 8px;
+	padding: 2px 5px;
 	text-decoration: none;
     border-radius: 3px;
     -moz-border-radius: 3px;
@@ -5822,8 +5822,8 @@ td.datePickerMonth {
 .poweredByImg
 {
 	position: absolute;
-	right: 28px;
-	top: 35px;
+	right: 10px;
+	top: 30px;
 }
 
 /* End */
